--- a/Stupid Benz Bot 1.6.0/bin/config.json
+++ b/Stupid Benz Bot 1.6.0/bin/config.json
@@ -1,5 +1,5 @@
 ﻿{
 	"token": "<Discord-Bot-Token>",
-	"announcements-id": Announcements-Channel-ID,
-	"console-id": Console-Channel-ID
+	"announcements-id": <Announcements-Channel-ID>,
+	"console-id": <Console-Channel-ID>
 }
